@@ -1,6 +1,9 @@
 OpenDNSSEC 2.2 - 2017-xx-xx
 
- * OPENDNSSEC-901: Enforcer would ignore <ManualKeyGeneration/> tag in conf.xml
+* OPENDNSSEC-901: Enforcer would ignore <ManualKeyGeneration/> tag in conf.xml
+* OPENDNSSEC-890: Mismatching TTLs in record sets would cause bogus signatures.
+* OPENDNSSEC-908: Warn when TTL exceeds KASP's MaxZoneTTL instead of capping.
+* OPENDNSSEC-910: DelegationSignerSubmitCommand would strip --cka_id
 
 OpenDNSSEC 2.1.1 - 2017-04-28
 
